compiler/tools/fpp-check/test/port_instance/undef_product_request.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_product_request.fpp:3.3
  product request port productRequestOut
  ^
error: symbol Fw is not defined
note: looking for a port here
